solc_mutator_ossfuzz_seed_corpus/test_sol/test_869018f981a8a762254700532fdbb378569becb0691b9c616ddaa9f65a5b16e6_048cd46240e084af32a9bf9c2f2ffde156d777b8_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(uint104 i0,string memory i1) private    returns(address payable o0)
  {
    uint144 l0 = uint144(22300745198530623141535718272648361505980415);
    address payable l1 = payable(address(0x0000000000000000000000000000000000000003));
    unchecked {
      function (address, bytes13, address[][] memory) internal   returns (bytes memory) l2;
      function () internal   returns (bool, address) l3;
      (o0) = (payable(address(0x0000000000000000000000000000000000000002)));
      assert(o0 == payable(address(0x0000000000000000000000000000000000000002)));
      assembly
      {
        mstore8(mod(i0, 0x40), i0)
        pop(i1)
        o0 := i0
        function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9, ai10, ai11, ai12, ai13) -> ao0, ao1, ao2, ao3, ao4
        {
          let al0 := 0
          switch 53233505297928783886784584019909744262704215476508815621461115723378311011558
          default
          {
          }
          for 
          {
          }
          ai10
          {
          }
          {
            sstore(115792089237316195423570985008687907853269984665640564039457584007913129639935, mload(mod(i0, 0x40)))
            ao4 := mload(mod(i0, 0x40))
          }
        }
      }
    }
  }
  modifier m0() 
  {
    bytes16(0x00000000000000000000000000000000);
    (address payable l0) = f0({i0: uint104((uint104(20282409603651670423947251286015) / uint104((((uint104(5258280206707969836304808890794) | uint104(0)) + uint104(20282409603651670423947251286015)) / uint104(5620083350078850368798171190144))))), i1: string("b3411119c416c95a34202d01a855f160ec3a1940008fcb61d099e5755db5a35aba413346e838c9152c120929")});
    _;
  }
}
pragma solidity >= 0.0.0;
// ----
// DeclarationError 6578: (su0.sol:1164-1166): Cannot access local Solidity variables from inside an inline assembly function.
// DeclarationError 6578: (su0.sol:1205-1207): Cannot access local Solidity variables from inside an inline assembly function.
